# wembley

./: .gitignore  Cargo.toml  README.md  readme.md  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  benchmark_bike.md  benchmark_california.md  benchmark_covertype.md  performance.md
examples/: bench_bike.py  bench_california.py  bench_covertype.py  bike.rs  california.rs  covertype.rs  fetch_bike.rs  fetch_california.py  fetch_covertype.rs
src/: bin_mapper.rs  boosting.rs  config.rs  data_partition.rs  dataset.rs  histogram.rs  lib.rs  tree.rs
src/objective/: binary.rs  mod.rs  quantile.rs  regression.rs
