[package]
name = "lgbm"
version = "0.1.0"
edition = "2021"

[lib]
name = "lgbm"
path = "src/lib.rs"

[[example]]
name = "fetch_bike"
path = "examples/fetch_bike.rs"

[[example]]
name = "california"
path = "examples/california.rs"

[[example]]
name = "bike"
path = "examples/bike.rs"

[[example]]
name = "fetch_covertype"
path = "examples/fetch_covertype.rs"

[[example]]
name = "covertype"
path = "examples/covertype.rs"

[dependencies]
rayon = "1"
thiserror = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
