[package]
name = "wembley"
version = "0.1.0"
edition = "2021"
description = "Histogram-based gradient boosting (LightGBM-style) in Rust: regression, binary classification, and quantile regression"
repository = "https://github.com/awkward-crow/wembley"
license = "MIT"
keywords = ["gradient-boosting", "lightgbm", "machine-learning", "decision-tree", "quantile-regression"]
categories = ["algorithms", "science"]

[lib]
name = "lgbm"
path = "src/lib.rs"

[[example]]
name = "fetch_bike"
path = "examples/fetch_bike.rs"

[[example]]
name = "california"
path = "examples/california.rs"

[[example]]
name = "bike"
path = "examples/bike.rs"

[[example]]
name = "fetch_covertype"
path = "examples/fetch_covertype.rs"

[[example]]
name = "covertype"
path = "examples/covertype.rs"

[dependencies]
rayon = "1"
thiserror = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
